--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Prodotti</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
@@ -20,7 +20,7 @@
                 <!-- /brand -->
 
                 <!-- Hamburger button -->
-                <button class="navbar-toggler px-3 py-2" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler px-3 py-2 " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
@@ -37,13 +37,14 @@
         <div class="row">
             <!-- Sidebar -->
             <div id="navbarSupportedContent" class="sidebar collapse vh-100 col-md-4 col-lg-3 d-md-block bg-dark">
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none border-bottom border-2 border-secondary border-opacity-50">
+                <a href="/"
+                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none border-bottom border-2 border-secondary border-opacity-50">
                     <span class="fs-4 mb-4 mt-5">Bootstrap Dashboard</span>
                 </a>
                 <hr />
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page">
+                        <a href="#" class="nav-link text-white" aria-current="page">
                             <i class="fa-solid fa-house me-2"></i>
                             Dashboard
                         </a>
@@ -55,7 +56,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="products.html" class="nav-link text-white">
+                        <a href="products.html" class="nav-link active">
                             <i class="fa-solid fa-folder me-2"></i>
                             Prodotti
                         </a>
@@ -92,9 +93,49 @@
                     </ul>
                 </div>
             </div>
-
             <!-- MAIN -->
-            <main class="col-md-8 col-lg-9">Contenuto</main>
+            <main class="col-md-8 col-lg-9">
+                <div class="col-12">
+                    <h2>10 prodotti trovati</h2>
+                    <span>
+                        <button>Esporta</button>
+                        <button>Nuovo</button>
+                    </span>
+                </div>
+                <table class="table col-12">
+                    <thead>
+                        <tr>
+                            <th class="col-10 col-sm-8 col-md-7">Nome</th>
+                            <th class="d-none d-sm-table-cell col-sm-2 col-md-2">Prezzo</th>
+                            <th class="d-none d-md-table-cell col-md-1">Stato</th>
+                            <th class="col-2 col-sm-2 col-md-2">Azioni</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Smarthphone Samsung  Galaxy S21
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2">
+                                799.00€
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1">
+                                &check;
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2">
+                                <span>&check;</span>
+                                <span>&cross;</span>
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
+
+            </main>
             <!-- /MAIN -->
         </div>
     </div>
