--- a/sponsorizations.html
+++ b/sponsorizations.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sponsor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
@@ -43,13 +43,13 @@
                 <hr />
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page">
+                        <a href="#" class="nav-link text-white" aria-current="page">
                             <i class="fa-solid fa-house me-2"></i>
                             Dashboard
                         </a>
                     </li>
                     <li>
-                        <a href="sponsorizations.html" class="nav-link text-white">
+                        <a href="sponsorizations.html" class="nav-link active">
                             <i class="fa-solid fa-chart-line me-2"></i>
                             Sponsorizzazione
                         </a>
@@ -94,7 +94,7 @@
             </div>
 
             <!-- MAIN -->
-            <main class="col-md-8 col-lg-9">Contenuto</main>
+            <main class="col-md-8 col-lg-9">Sponsor</main>
             <!-- /MAIN -->
         </div>
     </div>
