--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+    <style>
+        body {
+            font-family: "Ubuntu", sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -37,7 +47,8 @@
         <div class="row">
             <!-- Sidebar -->
             <div id="navbarSupportedContent" class="sidebar collapse vh-100 col-md-4 col-lg-3 d-md-block bg-dark">
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none border-bottom border-2 border-secondary border-opacity-50">
+                <a href="/"
+                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none border-bottom border-2 border-secondary border-opacity-50">
                     <span class="fs-4 mb-4 mt-5">Bootstrap Dashboard</span>
                 </a>
                 <hr />
