--- a/products.html
+++ b/products.html
@@ -7,9 +7,19 @@
     <title>Prodotti</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+    <style>
+        body {
+            font-family: "Ubuntu", sans-serif;
+        }
+    </style>
 </head>
 
-<body>
+<body data-font="ubuntu">
     <!-- HEADER -->
     <header class="shadow-lg">
         <nav class="navbar navbar-expand-md collapse d-block d-md-none bg-dark" data-bs-theme="dark">
@@ -94,10 +104,10 @@
                 </div>
             </div>
             <!-- MAIN -->
-            <main class="col-md-8 col-lg-9">
-                <div class="col-12">
+            <main class="col-md-8 col-lg-9 vh-100 overflow-y-scroll">
+                <div class="col-12 my-5 d-flex justify-content-between align-items-center">
                     <h2>10 prodotti trovati</h2>
-                    <span>
+                    <span class="align-middle">
                         <button>Esporta</button>
                         <button>Nuovo</button>
                     </span>
@@ -106,32 +116,232 @@
                     <thead>
                         <tr>
                             <th class="col-10 col-sm-8 col-md-7">Nome</th>
-                            <th class="d-none d-sm-table-cell col-sm-2 col-md-2">Prezzo</th>
-                            <th class="d-none d-md-table-cell col-md-1">Stato</th>
-                            <th class="col-2 col-sm-2 col-md-2">Azioni</th>
+                            <th class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">Prezzo</th>
+                            <th class="d-none d-md-table-cell col-md-1 text-center">Stato</th>
+                            <th class="col-2 col-sm-2 col-md-2 text-center">Azioni</th>
                         </tr>
                     </thead>
                     <tbody>
+                        <!-- 1 -->
                         <tr>
                             <!-- nome -->
                             <td class="col-10 col-sm-8 col-md-7">
-                                Smarthphone Samsung  Galaxy S21
+                                Smarthphone Samsung Galaxy S21
                             </td>
                             <!-- prezzo -->
-                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2">
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
                                 799.00€
                             </td>
                             <!-- stato -->
-                            <td class="d-none d-md-table-cell col-md-1">
-                                &check;
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-check fs-3 text-success fs-3 text-success"></i>
                             </td>
                             <!-- azioni -->
-                            <td class="col-2 col-sm-2 col-md-2">
-                                <span>&check;</span>
-                                <span>&cross;</span>
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1 text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1 text-danger border border-1 border-danger rounded p-1"></i></span>
                             </td>
                         </tr>
-
+                        <!-- 2 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Apple MacBook Pro 13"
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €1.299,00
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-check fs-3 text-success"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
+                        <!-- 3 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Smartwatch Apple Watch Series 6
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €429,00
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-check fs-3 text-success"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
+                        <!-- 4 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Auricolari Wireless Apple AirPods Pro
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €279,00
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-check fs-3 text-success"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
+                        <!-- 5 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Console Sony PlayStation 5
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €499,00
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-check fs-3 text-success"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
+                        <!-- 6 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Monitor Gaming ASUS ROG Strix XG27UQ
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €999,00
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-check fs-3 text-success"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
+                        <!-- 7 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Stampante Multifunzione HP LaserJet Pro MFP M28w
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €159,00
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-xmark fs-3 text-danger"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
+                        <!-- 8 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Router Wi-Fi Mesh TP-Link Deco X20
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €199,00
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-check fs-3 text-success"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
+                        <!-- 9 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                SSD NVMe Western Digital Black SN850
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €229,00
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-check fs-3 text-success"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
+                        <!-- 10 -->
+                        <tr>
+                            <!-- nome -->
+                            <td class="col-10 col-sm-8 col-md-7">
+                                Mouse Gaming Logitech G502 HERO
+                            </td>
+                            <!-- prezzo -->
+                            <td class="d-none d-sm-table-cell col-sm-2 col-md-2 text-center">
+                                €79,99
+                            </td>
+                            <!-- stato -->
+                            <td class="d-none d-md-table-cell col-md-1 text-center">
+                                <i class="fa-regular fa-circle-xmark fs-3 text-danger"></i>
+                            </td>
+                            <!-- azioni -->
+                            <td class="col-2 col-sm-2 col-md-2 text-center">
+                                <span><i
+                                        class="fa-solid fa-pencil text-primary border border-1 border-primary rounded p-1"></i></span>
+                                <span><i
+                                        class="fa-solid fa-trash-can text-danger border border-1 border-danger rounded p-1"></i></span>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
 
