fix: buttons for modal

--- a/products.html
+++ b/products.html
@@ -104,13 +104,17 @@
                 </div>
             </div>
             <!-- MAIN -->
-            <main class="col-md-8 col-lg-9 vh-100 overflow-y-scroll">
+            <main class="col-md-8 col-lg-9 px-4 vh-100 overflow-y-scroll">
                 <div class="col-12 my-5 d-flex justify-content-between align-items-center">
                     <h2>10 prodotti trovati</h2>
-                    <span class="align-middle">
-                        <button>Esporta</button>
-                        <button>Nuovo</button>
+                    <div>
+                        <span class="border p-2 border-1 border-secondary rounded-start-2">
+                        <button class="border-0 bg-white text-secondary">Esporta</button>
                     </span>
+                    <span class="border p-2 border-1 border-secondary rounded-end-2">
+                        <button class="border-0 bg-white text-secondary">Nuovo</button>
+                    </span>
+                    </div>
                 </div>
                 <table class="table col-12">
                     <thead>
