--- a/sponsorizations.html
+++ b/sponsorizations.html
@@ -105,7 +105,64 @@
             </div>
 
             <!-- MAIN -->
-            <main class="col-md-8 col-lg-9">Sponsor</main>
+            <main class="col-md-8 col-lg-9 p-4 overflow-y-scroll vh-100">
+                <div class="col-12 bg-primary p-5 bg-light">
+                    <section class="text-center my-5">
+                        <h2>Trova il piano perfetto per te!</h2>
+                        <p class="text-secondary my-3">
+                            Scegli tra le nostre opzioni di abbonamento e goditi funzionalità esclusive e performance
+                            migliori
+                        </p>
+                        <strong class="my-4">Porta la tua esperienza al livello successivo!</strong>
+                        <div class="my-4">
+                            <button class="btn btn-primary rounded-start-pill rounded-end-pill">Scopri di più</button>
+                            <button class="btn btn-secondary rounded-start-pill rounded-end-pill">Contattaci</button>
+                        </div>
+                    </section>
+                    <div class="col-12 d-flex flex-column flex-lg-row">
+                        <div class="card col-12 col-lg-4 my-4 mx-lg-1 text-center">
+                            <div class="card-header">
+                                Gratis
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title"><span>€ 5</span><span class="text-secondary">/mese</span></h5>
+                                <p class="card-text my-0 mt-4">10 utenti</p>
+                                <p class="card-text my-0">2 GB di spazio</p>
+                                <p class="card-text my-0">Pubblicità</p>
+                                <p class="card-text mt-0 mb-4">Supporto email</p>
+                                <a href="#" class="btn btn-outline-primary">Prosegui</a>
+                            </div>
+                        </div>
+                        <div class="card col-lg-4 my-4 mx-lg-1 text-center border-primary">
+                            <div class="card-header text-white bg-primary">
+                                Premium
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title"><span>€ 15</span><span class="text-secondary">/mese</span></h5>
+                                <p class="card-text my-0 mt-4">50 utenti</p>
+                                <p class="card-text my-0">10 GB di spazio</p>
+                                <p class="card-text my-0">Senza pubblicità</p>
+                                <p class="card-text mt-0 mb-4">Supporto email prioritario</p>
+                                <a href="#" class="btn btn-primary">Prosegui</a>
+                            </div>
+                        </div>
+                        <div class="card col-lg-4 my-4 mx-lg-1 text-center">
+                            <div class="card-header">
+                                Enterprise
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title"><span>€ 29</span><span class="text-secondary">/mese</span></h5>
+                                <p class="card-text my-0 mt-4">Utenti illimitati</p>
+                                <p class="card-text my-0">Spazio illimitato</p>
+                                <p class="card-text my-0">Senza pubblicità</p>
+                                <p class="card-text mt-0 mb-4">Supporto via email e chat</p>
+                                <a href="#" class="btn btn-primary">Prosegui</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </main>
             <!-- /MAIN -->
         </div>
     </div>
