--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
                 <hr />
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-white" aria-current="page">
+                        <a href="index.html" class="nav-link text-white" aria-current="page">
                             <i class="fa-solid fa-house me-2"></i>
                             Dashboard
                         </a>
